--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "postcss": "^8.4.41",
     "@tailwindcss/postcss": "^4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
