modified:   src/app/api/health/route.ts modified:   src/app/api/media/route.ts modified:   src/app/page.tsx modified:   src/hooks/useMedia.ts modified:   src/lib/db.ts modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 30,
       "includeFiles": "prisma/**"
+    },
+    "app/**/route.js": {
+      "maxDuration": 30,
+      "includeFiles": "prisma/**"
+    },
+    "app/**/route.mjs": {
+      "maxDuration": 30,
+      "includeFiles": "prisma/**"
     }
   },
   "headers": [
