--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,6 @@
   "outputDirectory": ".next",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 30,
@@ -20,12 +19,15 @@
   },
   "headers": [
     {
+      "source": "/api/health",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    },
+    {
       "source": "/api/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "s-maxage=86400"
-        }
+        { "key": "Cache-Control", "value": "s-maxage=86400" }
       ]
     }
   ],
