modified:   MIGRATION_INSTRUCTIONS.md modified:   package.json new file:   scripts/setup-env.ps1

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "db:push": "prisma db push",
+  "db:push:direct": "node scripts/run-prisma-direct.js",
+  "db:test-env": "node scripts/run-test-with-env.js",
+  "env:setup": "powershell -NoProfile -ExecutionPolicy Bypass -File scripts/setup-env.ps1",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
