--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,18 @@
       ]
     },
     {
+      "source": "/api/sliders",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    },
+    {
+      "source": "/api/sliders/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    },
+    {
       "source": "/api/(.*)",
       "headers": [
         { "key": "Cache-Control", "value": "s-maxage=86400" }
